--- a/src/styles/search.module.css
+++ b/src/styles/search.module.css
@@ -13,6 +13,7 @@
   flex-grow: 1;
   margin-left: 15px;
   margin-right: 15px;
+  margin-bottom: 124px;
 }
 
 .subTitle {
